<resources>
    <string name="app_name">Construction company</string>

    <string name="activity_login_title">Sing in</string>
    <string name="activity_register_title">Sing up</string>

    <string name="login_password_field_hint">Password</string>
    <string name="login_email_field_hint">Email</string>
    <string name="login_forgot_passport_message">Forgot password?</string>
    <string name="login_button_text">Sign in</string>
    <string name="login_no_account_message">No account?</string>
    <string name="login_signup_message">Sign up</string>
    <string name="login_invalid_email_or_password">Email or password are incorrect</string>

    <string name="registration_phone_field_hint">Phone number</string>
    <string name="registration_password_field_hint">Password</string>
    <string name="registration_repeat_password_field_hint">Repeat password</string>
    <string name="registration_email_field_hint">Email</string>
    <string name="registration_button_text">Sing up</string>
    <string name="registration_already_have_account_message">Already have an account?</string>
    <string name="registration_password_not_matching">Password isn\'t matching</string>
    <string name="registration_identity_already_taken">User with that Email already exists</string>
    <string name="registration_invalid_data_presented">Input data has error</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_services">Services</string>
    <string name="menu_orders">Order history</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_logout">Logout</string>

    <string name="item_service_button_text">Order</string>

    <string name="support_sent_message_hint">Type message</string>
    <string name="support_agent_name">Support agent</string>
    <string name="support_empty_message">Empty message</string>
    <string name="support_text_message">Test message</string>

    <string name="profile_email_hint">Email</string>
    <string name="profile_phone_hint">Phone number</string>
    <string name="profile_password_hint">Password</string>
    <string name="profile_button_text">Update</string>
    <string name="profile_password_length_error">Password length less then 8 characters</string>
    <string name="profile_data_updated">Profile data updated</string>

    <string name="orders_cancel_button_text">Cancel</string>
    <string name="orders_restore_button_text">Restore</string>
    <string name="orders_state_canceled">canceled</string>
    <string name="orders_state_processing">processing</string>
    <string name="orders_state_in_progress">in progress</string>
    <string name="orders_state_done">finished</string>
    <string name="order_added">Service added to orders</string>
    <string name="function_not_available">This function not available</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
