<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/navigation_profile_logo"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/navigation_services_logo"
            android:title="@string/menu_services" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/navigation_orders_logo"
            android:title="@string/menu_orders" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/navigation_support_logo"
            android:title="@string/menu_support" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/navigation_exit_logo"
            android:title="@string/menu_logout" />

    </group>
</menu>