<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_services">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.ui.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.ui.fragments.ServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.ui.fragments.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.example.ui.fragments.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support"/>

    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.ui.activities.LoginActivity"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_login"/>

</navigation>