<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb"
    tools:context="com.example.ui.activities.LoginActivity">


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_title"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_size_level_1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/inputPassword"
        style="@style/EditTextStyle"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_security"
        android:hint="@string/login_password_field_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <EditText
        android:id="@+id/inputEmail"
        style="@style/EditTextStyle"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/login_email_field_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_forgot_passport_message"
        android:textColor="@color/link_color"
        android:textSize="@dimen/font_size_level_2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_white"
        android:text="@string/login_button_text"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_no_account_message"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_size_level_2"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signup_message"
            android:textColor="@color/link_color"
            android:textSize="@dimen/font_size_level_2"
            android:layout_marginLeft="5dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>