<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.example.ui.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="20dp">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/navigation_profile_logo"/>

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test@test.com"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/image_profile"
                android:textSize="@dimen/profile_email_font_size"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_text_view"
                android:layout_toEndOf="@id/image_profile"
                android:text="8 (800) 555-35-35"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_size_level_2"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_email_hint"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_black"
                    android:drawablePadding="10dp"
                    android:text="test@test.com"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/input_bg_black"
                    style="@style/EditTextStyle"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_phone_hint"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone_24px"
                    android:drawablePadding="10dp"
                    android:inputType="phone"
                    android:text="88005553535"
                    android:background="@drawable/input_bg_black"
                    style="@style/EditTextStyle"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_password_hint"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_security_black"
                    android:drawablePadding="10dp"
                    android:background="@drawable/input_bg_black"
                    android:inputType="textPassword"
                    style="@style/EditTextStyle"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/button_primary"
            android:text="@string/profile_button_text"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>